--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Gone Riding</title>
+        <title>Maximilien Bernard, CPI.</title>
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
 
     </head>
-
-    <div style="text-align: center;" class="band">
-    <img src="logo.png" alt="Max's gone riding logo"  style="width:100px; height:100px; border:none;">
-    </div>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,38 +21,23 @@ body {margin:0;font-family:Arial}
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html" class="active">À Propos</a>
   <div class="dropdown">
-    <button class="dropbtn">Terre-Neuve 
+    <button class="dropbtn">Projets 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href=".\Terre-Neuve\Kite-Surf_FR.html">Kite-Surf</a>
-      <a href=".\Terre-Neuve\Surf_FR.html">Surf</a>
-      <a href=".\Terre-Neuve\Hiking_FR.html">Randonnée</a>
-      <a href=".\Terre-Neuve\MTB_FR.html">MTB</a>
+      <a href=".\Terre-Neuve\Kite-Surf_FR.html">Résidentiel</a>
+      <a href=".\Terre-Neuve\Surf_FR.html">Commercial</a>
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Québec 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Kite-Surf</a>
-      <a href="#">Surf</a>
-      <a href="#">Randonnée</a>
-      <a href="#">MTB</a>
-    </div>  
+    <button class="dropbtn">Logiciel 
+    </button> 
   </div> 
   <div class="dropdown">
-    <button class="dropbtn">St-Pierre/Miquelon 
-      <i class="fa fa-caret-down"></i>
+    <button class="dropbtn">Autres 
     </button>
-    <div class="dropdown-content">
-      <a href=".\St-Pierre Miquelon\Kite-Surf_FR.html">Kite-Surf</a>
-      <a href=".\St-Pierre Miquelon\Surf_FR.html">Surf</a>
-      <a href=".\St-Pierre Miquelon\Hiking_FR.html">Randonnée</a>
-    </div>  
   </div> 
   <a href="#contact">Contact</a>
 <div class="langue">  
@@ -68,9 +49,13 @@ body {margin:0;font-family:Arial}
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
+<div style="text-align: right;" class="band">
+  <img src="Image_pro.jpeg" alt="Photo profil"  style="width:200px; height:200px">
+  </div>
+
     <body>
 
-        <h1> À propos de ce projet </h1>
+        <h1> Maximilien Bernard, CPI. </h1>
 
             <p> Juste un site web qui dépicte mes aventures, exploration, découverte à travers le monde </p>
 
