ajout info page d'accueil

--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@ body {margin:0;font-family:Arial}
 
         <h1> Maximilien Bernard, CPI. </h1>
 
-            <p> Juste un site web qui dépicte mes aventures, exploration, découverte à travers le monde </p>
+            <p> Diplomé de l'école Polytechnique de Montréal en génie civil en Décembre 2019. J'ai commencé ma carrière en tant
+              que CPI en conception de structure en février 2020 chez DaVinci Structures à Québec où mes fonctions principales étaient 
+              la conception de bâtiment résidentiel en bois répondant à la partie 9 et la partie 4 du 
+              <abbr title="Code National du bâtiment Canadien">CNBC</abbr> à  et l'inspection de chantier. J'ai eu aussi l'opportunité de concevoir des radiers 
+              de bâtiment commerciaux, de faire la conception de ferme agricole en treillis métallique ou encore faire la vérification de mur
+              mur rideau en verre. J'ai fais la conception d'assemblage de bois, acier et béton.
+              J'avais pour rôle de concevoir le bâtiment dans son entiereté sous la supervision d'un 
+              ingénieur. Du calcul des charges, à  </p>
 
         
         <!-- Load external JavaScript -->
