--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     </head>
 
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -27,8 +28,8 @@ body {margin:0;font-family:Arial}
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href=".\Terre-Neuve\Kite-Surf_FR.html">Résidentiel</a>
-      <a href=".\Terre-Neuve\Surf_FR.html">Commercial</a>
+      <a href=".\Projet\Résidentiel\Résidentiel_FR.html">Résidentiel</a>
+      <a href=".\Projet\Commercial\Commercial_FR.html">Commercial</a>
     </div>
   </div>
   <div class="dropdown">
@@ -49,6 +50,8 @@ body {margin:0;font-family:Arial}
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
+
+
 <div style="text-align: right;" class="band">
   <img src="Image_pro.jpeg" alt="Photo profil"  style="width:200px; height:250px">
   </div>
@@ -57,14 +60,11 @@ body {margin:0;font-family:Arial}
 
         <h1> Maximilien Bernard, CPI. </h1>
 
-            <p> Diplomé de l'école Polytechnique de Montréal en génie civil en Décembre 2019. J'ai commencé ma carrière en tant
-              que CPI en conception de structure en février 2020 chez DaVinci Structures à Québec où mes fonctions principales étaient 
-              la conception de bâtiment résidentiel en bois répondant à la partie 9 et la partie 4 du 
-              <abbr title="Code National du bâtiment Canadien">CNBC</abbr> à  et l'inspection de chantier. J'ai eu aussi l'opportunité de concevoir des radiers 
+            <p class="index"> Diplomé de l'école Polytechnique de Montréal en génie civil en Décembre 2019, j'ai commencé ma carrière en tant
+              que CPI en conception de structure en février 2020 chez DaVinci Structures à Québec. Mes fonctions principales étaient 
+              la conception de bâtiment résidentiel en bois et l'inspection de chantier. J'ai eu aussi l'opportunité de concevoir des radiers 
               de bâtiment commerciaux, de faire la conception de ferme agricole en treillis métallique ou encore faire la vérification de mur
-              mur rideau en verre. J'ai fais la conception d'assemblage de bois, acier et béton.
-              J'avais pour rôle de concevoir le bâtiment dans son entiereté sous la supervision d'un 
-              ingénieur. Du calcul des charges, à  </p>
+              rideau en verre. J'ai fais aussi la conception d'assemblage de bois, acier et béton. </p>
 
         
         <!-- Load external JavaScript -->
