--- a/Projet/Commercial/Commercial_FR.html
+++ b/Projet/Commercial/Commercial_FR.html
@@ -50,6 +50,12 @@ body {margin:0;font-family:Arial}
 </div>
 </body>
 
+  <h1> Projets commerciaux </h1>
+
+            <p> Conception de ferme agricole en treillis métallique. La conception a été réalisée à partir du logiciel ADA. Le logiciel 
+              nous permet d'optimiser la conception et de choisir le type de treillis ayant la masse d'acier la moins élévé et donc
+            l'option la moins dispendieuse </p>
+
 <!-- Load external JavaScript -->
 <script src="C:\Users\maxbe\Documents\Myportfolio\maxfolio\app.js"></script>
 
