--- a/Projet/Résidentiel/Résidentiel_FR.html
+++ b/Projet/Résidentiel/Résidentiel_FR.html
@@ -56,7 +56,7 @@ body {margin:0;font-family:Arial}
 <div>
     <img src="C:\Users\maxbe\Documents\Myportfolio\maxfolio\Projet\Résidentiel\678 rue visitation.png" alt="Photo profil"  style="width:500px; height:200px" class="image_droite">
 
-    <p>Bâtiment résidentiel</p>
+    <p>Projets résidentiels</p>
 </div>
 
 </html>
