--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ body {margin:0;font-family:Arial}
 
 <div style="text-align: right;" class="band">
   <img src="Image_pro.jpeg" alt="Photo profil"  style="width:200px; height:250px">
-  </div>
+</div>
 
     <body>
 
         <h1> Maximilien Bernard, CPI. </h1>
 
-            <p class="index"> Diplomé de l'école Polytechnique de Montréal en génie civil en Décembre 2019, j'ai commencé ma carrière en tant
+            <p class="p1"> Diplomé de l'école Polytechnique de Montréal en génie civil en Décembre 2019, j'ai commencé ma carrière en tant
               que CPI en conception de structure en février 2020 chez DaVinci Structures à Québec. Mes fonctions principales étaient 
               la conception de bâtiment résidentiel en bois et l'inspection de chantier. J'ai eu aussi l'opportunité de concevoir des radiers 
               de bâtiment commerciaux, de faire la conception de ferme agricole en treillis métallique ou encore faire la vérification de mur
